--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,14 @@
+$primary: #ec8f00;
+$secondary: #292929;
+
+$text: #1c1c1c;
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $secondary;
 }
 
 code {
