--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -19,7 +19,7 @@
     h1 {
       color: color.$primary;
       font-size: 2rem;
-      line-height: 1.25rem;
+      line-height: 8px;
       font-weight: bold;
       padding: 0 25px;
 
