--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -21,11 +21,10 @@
 
   .title {
     color: color.$white;
-    text-align: left;
+    text-align: cen;
     font-size: 14px;
     font-weight: 500;
-
-    padding: 0 15px;
+    padding: 0 20px;
     cursor: pointer;
 
     display: -webkit-box;
@@ -48,11 +47,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 
     .icon {
       height: 20px;
       width: 20px;
       fill: color.$secondary;
+      transition: fill 500ms;
+    }
+
+    &:hover {
+      .icon {
+        fill: color.$primary;
+      }
     }
   }
 }
