--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -10,7 +10,11 @@
       padding: 0 6.4%;
     }
 
-    @media screen and (min-width: 1024px) and (max-width: 1919px) {
+    @media screen and (min-width: 1280px) and (max-width: 1919px) {
+      padding: 0 3.1%;
+    }
+
+    @media screen and (min-width: 1024px) and (max-width: 1279px) {
       padding: 0 3.5%;
     }
   }
