--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -12,6 +12,8 @@
   gap: 16px;
 
   img {
+    width: 128px;
+    height: 170px;
     margin: 0 auto;
     margin-top: 15px;
     object-fit: cover;
