--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -18,4 +18,10 @@
       padding: 0 3.5%;
     }
   }
+
+  .bg {
+    background-color: #f5f5f5;
+    padding: 20px;
+    border-radius: 10px;
+  }
 }
