--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -64,4 +64,26 @@
       }
     }
   }
+
+  .liked {
+    position: absolute;
+    right: 35px;
+    top: 5px;
+
+    height: 30px;
+    width: 30px;
+    background-color: color.$white;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+    .icon {
+      height: 20px;
+      width: 20px;
+      fill: color.$primary;
+      transition: fill 500ms;
+    }
+  }
 }
