--- a/src/components/filtro/filtro.scss
+++ b/src/components/filtro/filtro.scss
@@ -1,6 +1,10 @@
 @use '../../index.scss' as color;
 
 .dropdown {
+  @media (max-width: 425px) {
+    width: 80%;
+  }
+
   display: flex;
   position: relative;
   width: 20%;
