--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -20,6 +20,11 @@
   }
 
   .bg {
+    position: absolute;
+    top: 280px;
+    width: 60%;
+    right: 15%;
+    font-size: 1.5rem;
     background-color: #f5f5f5;
     padding: 20px;
     border-radius: 10px;
