--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -52,6 +52,7 @@
     height: 30px;
     width: 30px;
     background-color: color.$white;
+    border: 2px solid color.$secondary;
     border-radius: 100%;
     display: flex;
     align-items: center;
@@ -73,24 +74,8 @@
   }
 
   .liked {
-    position: absolute;
-    right: 35px;
-    top: 5px;
-
-    height: 30px;
-    width: 30px;
-    background-color: color.$white;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-
     .icon {
-      height: 20px;
-      width: 20px;
-      fill: color.$primary;
-      transition: fill 500ms;
+      fill: color.$primary !important;
     }
   }
 }
